# personal-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_selectors.py  pyproject.toml  railway.toml
personal_assistant/: cli.py  config.py  pipeline.py
personal_assistant/analyzer/: keyword_scorer.py  relevance.py
personal_assistant/applicator/: submit.py
personal_assistant/cv/: base_cv.yaml  base_cv_fr.yaml  generator.py  tailoring.py
personal_assistant/cv/templates/: cv_template.html
personal_assistant/db/: models.py  queries.py
personal_assistant/networker/: outreach.py  research.py
personal_assistant/notifier/: email_plan.py  telegram.py
personal_assistant/scheduler/: jobs.py
personal_assistant/scraper/: anti_detect.py  auth.py  jobs.py
personal_assistant/server/: auth.py  dashboard.py  telegram_handler.py
personal_assistant/templates/: dashboard.html  login.html
